--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <style>
       body {
+        font-family: 'PT Sans', sans-serif;
+        font-weight: bold;
         background: black;
         position: absolute;
         left: 0;
@@ -25,11 +27,30 @@
       }
 
       .instructions, .score-report  {
-        font-family: 'PT Sans', sans-serif;
         color: white;
-        font-weight: bold;
         text-align: center;
         font-size: 20px;
+      }
+
+      .lose-pop-up {
+        box-sizing: border-box;
+        padding: 20px;
+        display: none;
+        background: black;
+        color: white;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 175px;
+        width: 300;
+        height: 150px;
+        font-size: 40px;
+        border: 10px solid white;
+        text-align: center;
+      }
+
+      .lose-pop-up.active {
+        display: block;
       }
 
     </style>
@@ -67,6 +88,10 @@
       <br>
       Press 'p' to pause and to resume play.
     </p>
+
+    <div class="lose-pop-up">
+      Oh no!  You lose!  Press ENTER to play again.
+    </div>
 
   </body>
 </html>
