Display score in losing modal

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        top: 175px;
-        width: 300;
-        height: 150px;
+        top: 145px;
+        width: 350;
+        height: 225px;
         font-size: 40px;
         border: 10px solid white;
         text-align: center;
@@ -90,7 +90,11 @@
     </p>
 
     <div class="lose-pop-up">
-      Oh no!  You lose!  Press ENTER to play again.
+      Oh no!  You lose!
+      <br>
+      Score: <span class="final-score"></span>.
+      <br>
+      Press ENTER to play again.
     </div>
 
   </body>
