--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <style>
       body {
+        margin: 0;
         font-family: 'PT Sans', sans-serif;
         font-weight: bold;
         background: black;
@@ -18,21 +19,25 @@
       }
 
       #game-canvas {
-        width: 750px;
-        height: 450px;
-        border: 3px solid white;
+        width: 100%;
+        height: auto;
         margin-left: 50%;
-        margin-top: 20px;
         transform: translateX(-50%);
       }
 
-      .instructions, .score-report  {
-        color: white;
+      .score-report {
+        color: #ccc;
         text-align: center;
         font-size: 20px;
+        text-align: right;
+        position: absolute;
+        right: 20px;
+        top: 120px;
+        font-weight: lighter;
+        text-transform: capitalize;
       }
 
-      .lose-pop-up {
+      .lose-pop-up, .instructions {
         box-sizing: border-box;
         padding: 20px;
         display: none;
@@ -40,16 +45,16 @@
         color: white;
         position: absolute;
         left: 50%;
-        transform: translateX(-50%);
-        top: 145px;
-        width: 350;
-        height: 225px;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        min-width: 350px;
+        min-height: 225px;
         font-size: 40px;
         border: 10px solid white;
         text-align: center;
       }
 
-      .lose-pop-up.active {
+      .lose-pop-up.active, .instructions.active {
         display: block;
       }
 
@@ -67,7 +72,6 @@
     <script type="application/javascript" src="./lib/ship.js"></script>
     <script type="application/javascript" src="./lib/game.js"></script>
     <script type="application/javascript" src="./lib/gameView.js"></script>
-
     <canvas id="game-canvas" width="750" height="450"></canvas>
 
     <script type="text/javascript">
@@ -81,13 +85,13 @@
       Current score: 0
     </p>
 
-    <p class="instructions">
+    <div class="instructions active">
       Press UP, DOWN, LEFT, and RIGHT to move.
       <br>
       Press SPACE to fire bullets.
       <br>
       Press 'p' to pause and to resume play.
-    </p>
+    </div>
 
     <div class="lose-pop-up">
       Oh no!  You lose!
