--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         text-align: right;
         position: absolute;
         right: 20px;
-        top: 120px;
+        bottom: 0px;
         font-weight: lighter;
         text-transform: capitalize;
       }
