--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     <canvas id="game-canvas" width="750" height="450"></canvas>
 
     <script type="text/javascript">
+      $("canvas").attr("width", window.Asteroids.Game.DIM_X);
+      $("canvas").attr("height", window.Asteroids.Game.DIM_Y);
       var ctx = document.getElementById("game-canvas").getContext("2d");
       var game = new window.Asteroids.Game();
       var gameView = new window.Asteroids.GameView(game, ctx);
