--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Asteroids</title>
 
     <style>
-      body {
+      html, body, div, canvas {
+        padding: 0;
         margin: 0;
+        border: 0;
         font-family: 'PT Sans', sans-serif;
         font-weight: bold;
         background: black;
