--- a/index.html
+++ b/index.html
@@ -423,14 +423,14 @@
     </div>
 
     <div class="resume">
-      <h3>Want to know more?  </h3>
+      <h3>WANT TO KNOW MORE?</h3>
       <br>
       Check out my <a href="LilyRiopelleResume.pdf">resume</a>.
 
     </div>
 
     <div class="contact">
-      <h3>Get in touch!</h3>
+      <h3>GET IN TOUCH!</h3>
       <a id="foxyform_embed_link_673402" href="http://www.foxyform.com/">foxyform</a>
       <script type="text/javascript">
       (function(d, t){
