fix asteroids link in resume

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <div class="resume">
       <h3>WANT TO KNOW MORE?</h3>
       <br>
-       <a href="LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
+       <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
     </div>
 
     <div class="contact">
