fix asteroids link in index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
           </h4>
 
-          <a class="view-project" href="http://asteroids.lilykriopelle.com">
+          <a class="view-project" href="http://www.lilykriopelle.com/asteroids">
             Check it out!
           </a>
 
