add app academy link to about me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         I never thought I'd find a field that challenged me technically and creatively.
         I grew up dreading the day when I'd need to give up one of my passions.
         Luckily, I discovered programming, and fell in love with its perfect balance
-        of logic and creativity. When I'm not coding, I can usually be found consuming
+        of logic and creativity.
+      </p>
+
+      <p>
+        I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>.
+        When I'm not teaching or coding, I can usually be found consuming
         dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
       </p>
     </div>
