Add email link to index and add separating axis theorem to asteroids description

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
               Randomly generates irregular polygonal asteroid geometry.
               <br><br>
               Uses trigonometry and transformational geometry to approximate physics and render objects.
+              <br><br>
+              Implements the Separating Axis Theorem to accurately detect collisions between irregular polygons.
             </p>
           </li>
 
@@ -231,38 +233,13 @@
         </ul>
       </div>
 
-      <div class="resume">
+      <div class="resume contact">
         <h3>WANT TO KNOW MORE?</h3>
         <br>
          <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
+         Or, <a href="mailto:lilykriopelle@gmail.com">email me</a> to set up a meeting.
       </div>
 
-      <!-- <div class="contact">
-        <form class="email" action="mailer.php" method="post">
-        <p>Name:</p>
-        <input type="text" class="text-input" name="name" />
-        <p>E-mail:</p>
-        <input type="text" class="text-input" name="email" />
-        <p>Subject:</p>
-        <input type="text" class="text-input" name="subject" />
-        <p>Message:</p>
-        <textarea name="message" class="text-input"></textarea></p>
-        <input class="send" type="submit" value="Send">
-        </form>
-      </div> -->
-
-      <div class="contact">
-        <h3>GET IN TOUCH!</h3>
-        <a id="foxyform_embed_link_673402" href="http://www.foxyform.com/">foxyform</a>
-        <script type="text/javascript">
-        (function(d, t){
-           var g = d.createElement(t),
-               s = d.getElementsByTagName(t)[0];
-           g.src = "http://www.foxyform.com/js.php?id=673402&sec_hash=d7dc9d348ff&width=350px";
-           s.parentNode.insertBefore(g, s);
-        }(document, "script"));
-        </script>
-      </div>
     </main>
   </body>
 </html>
