Add link to directing website

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         <p>
           I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>.
-          When I'm not teaching or coding, I can usually be found consuming
-          dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
+          When I'm not teaching or coding, I can usually be found <a href="http://lilyriopelle.com">directing plays</a>,
+          consuming dangerous quantities of iced coffee, or adventuring around my beautiful hometown, NYC.
         </p>
       </div>
 
