fix broken resume download

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class="resume contact">
         <h3>WANT TO KNOW MORE?</h3>
         <br>
-         <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
+         <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="documents/LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
          Or, <a href="mailto:lilykriopelle@gmail.com">email me</a> to set up a meeting.
       </div>
 
