Add link to blog.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         </p>
 
         <p>
-          I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>.
+          I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>,
+          and blog about my experiences teaching <a href="blog">here</a>.
           When I'm not teaching or coding, I can usually be found <a href="http://lilyriopelle.com">directing plays</a>,
           consuming dangerous quantities of iced coffee, or adventuring around my beautiful hometown, NYC.
         </p>
+
       </div>
 
       <div class="skills">
