add minesweeper and node chat

--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
             <i class="devicon-rails-plain-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-java-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
             <i class="devicon-python-plain-wordmark colored"></i>
           </li>
           <li class="skill">
@@ -92,6 +89,9 @@
           </li>
           <li class="skill">
             <i class="devicon-backbonejs-plain-wordmark colored"></i>
+          </li>
+          <li class="skill">
+            <i class="devicon-react-original-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-html5-plain-wordmark colored"></i>
@@ -130,11 +130,11 @@
             <p class="project-description">
               <span>Collaborative recipe development platform with annotations inspired by Genius.</span>
               <br><br>
-              Backbone front end consumes a RESTful JSON API served up by Rails.
+                Backbone front end consumes a RESTful JSON API served up by Rails.
               <br><br>
-              Gets start and end indices for annotations by reading DOM's selection object.
+                Gets start and end indices for annotations by reading DOM's selection object.
               <br><br>
-              Supports nested and overlapping annotations.
+                Supports nested and overlapping annotations.
             </p>
           </li>
 
@@ -157,11 +157,36 @@
             <p class="project-description">
               <span>Everyone's favorite arcade classic, coded for the browser.</span>
               <br><br>
-              Randomly generates irregular polygonal asteroid geometry.
+                Randomly generates irregular polygonal asteroid geometry.
               <br><br>
-              Uses trigonometry and transformational geometry to approximate physics and render objects.
+                Uses trigonometry and transformational geometry to approximate physics and render objects.
               <br><br>
-              Implements the Separating Axis Theorem to accurately detect collisions between irregular polygons.
+                Implements the Separating Axis Theorem to accurately detect collisions between irregular polygons.
+            </p>
+          </li>
+
+          <li class="project group">
+            <h4 class="project-header group">
+              <p>
+              Node Chat (Node.js, Socket.io, jQuery)
+              </p>
+              <div class="project-links">
+                <a href="http://github.com/lilykriopelle/chat">GITHUB</a>
+              </div>
+            </h4>
+
+            <a class="view-project" href="http://nodechat.herokuapp.com">
+              Check it out!
+            </a>
+
+            <img class="project-preview" src="images/chat_pic.png" alt="" />
+
+            <p class="project-description">
+              <span>The canonical first Node project.</span>
+              <br><br>
+                Implements realtime messaging with Socket.io's event-based engine.
+              <br><br>
+                Allows users to create and join multiple rooms.
             </p>
           </li>
 
@@ -182,56 +207,36 @@
             <p class="project-description">
               <span>Ruby ORM recreating the funtionality of Rails' ActiveRecord</span>
               <br><br>
-              Generates SQL queries based on naming conventions to replicate Rails associations.
+                Generates SQL queries based on naming conventions to replicate Rails associations.
               <br><br>
-              Utilizes advanced Ruby language features, such as meta-programming and reflection.
-            </p>
-          </li>
-
-          <!-- <li class="project group">
-            <h4 class="project-header group">
-              <p>
-              Java Compiler (Java)
-              </p>
-              <div class="project-links">
-                <a href="#">GITHUB</a>
-              </div>
-            </h4>
-            <a class="project-thumb" href="http://www.github.com/lilykriopelle/compiler">
-              <img class="project-preview" src="compiler_pic.png" alt="" />
-            </a>
-
-            <p class="project-description">
-              Compiler for a subset of the Java Programming Language
-              <br><br>
-              Optimizations include common subexpression elimination and polymorphic inline caching.
-              <br><br>
-              Supported language features include inheritance and interfaces.
+                Utilizes advanced Ruby language features, such as meta-programming and reflection.
             </p>
           </li>
 
           <li class="project group">
             <h4 class="project-header group">
               <p>
-              Ray Tracer with Photon Mapping (C++)
+              Minesweeper (React.js, Javascript)
               </p>
               <div class="project-links">
-                <a href="#">GITHUB</a>
+                <a href="http://github.com/lilykriopelle/minesweeper">GITHUB</a>
               </div>
             </h4>
-            <a class="project-thumb" href="http://www.github.com/lilykriopelle/ray_tracer">
-              <img class="project-preview" src="raytracer_pic.png" alt="" />
+
+            <a class="view-project" href="http://www.lilykriopelle.com/minesweeper">
+              Check it out!
             </a>
 
-            <p class="project-description">
-              Ray Tracer
-              <br><br>
-              Photon mapping -> caustics.
-              <br><br>
-              Cool.
-            </p>
-          </li> -->
+            <img class="project-preview" src="images/minesweeper_pic.png" alt="" />
 
+            <p class="project-description">
+              <span>Why did this game seem so hard when I was a child???</span>
+              <br><br>
+              React.js component heirarchy efficiently renders changing game state.
+              <br><br>
+              Evokes nostalgia by replicating those clicky tiles we all knew and loved in the 90s.
+            </p>
+          </li>
         </ul>
       </div>
 
