comment out node chat in projects

--- a/index.html
+++ b/index.html
@@ -168,6 +168,29 @@
           <li class="project group">
             <h4 class="project-header group">
               <p>
+              ActiveRecord Lite (Ruby)
+              </p>
+              <div class="project-links">
+                <a href="http://www.github.com/lilykriopelle/active_record_lite">GITHUB</a>
+              </div>
+            </h4>
+            <a class="view-project" href="http://www.github.com/lilykriopelle/active_record_lite">
+              Check it out!
+            </a>
+            <img class="project-preview" src="images/activerecord_pic.png" alt="" />
+
+            <p class="project-description">
+              <span>Ruby ORM recreating the funtionality of Rails' ActiveRecord</span>
+              <br><br>
+                Generates SQL queries based on naming conventions to replicate Rails associations.
+              <br><br>
+                Utilizes advanced Ruby language features, such as meta-programming and reflection.
+            </p>
+          </li>
+
+          <!-- <li class="project group">
+            <h4 class="project-header group">
+              <p>
               Node Chat (Node.js, Socket.io, jQuery)
               </p>
               <div class="project-links">
@@ -188,30 +211,7 @@
               <br><br>
                 Allows users to create and join multiple rooms.
             </p>
-          </li>
-
-          <li class="project group">
-            <h4 class="project-header group">
-              <p>
-              ActiveRecord Lite (Ruby)
-              </p>
-              <div class="project-links">
-                <a href="http://www.github.com/lilykriopelle/active_record_lite">GITHUB</a>
-              </div>
-            </h4>
-            <a class="view-project" href="http://www.github.com/lilykriopelle/active_record_lite">
-              Check it out!
-            </a>
-            <img class="project-preview" src="images/activerecord_pic.png" alt="" />
-
-            <p class="project-description">
-              <span>Ruby ORM recreating the funtionality of Rails' ActiveRecord</span>
-              <br><br>
-                Generates SQL queries based on naming conventions to replicate Rails associations.
-              <br><br>
-                Utilizes advanced Ruby language features, such as meta-programming and reflection.
-            </p>
-          </li>
+          </li> -->
 
           <li class="project group">
             <h4 class="project-header group">
