Add picture to about me.

--- a/index.html
+++ b/index.html
@@ -45,24 +45,33 @@
     </h1>
 
     <main>
-
       <div class="about-me">
         <h3>A LITTLE ABOUT ME</h3>
-        <!-- picture of me here -->
-        <p>
-          As a left-brain/right-brain hybrid (think mathlete/theatre kid),
-          I never thought I'd find a field that challenged me technically and creatively.
-          I grew up dreading the day when I'd need to give up one of my passions.
-          Luckily, I discovered programming, and fell in love with its perfect balance
-          of logic and creativity.
-        </p>
+        <div class="group">
+          <img class="me" src="images/lily.jpg" alt="" />
+          <section>
+            <p>
+              As a left-brain/right-brain hybrid (think mathlete/theatre kid),
+              I never thought I'd find a field that challenged me technically and creatively.
+              I grew up dreading the day when I'd need to give up one of my passions.
+            </p>
 
-        <p>
-          I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>,
-          and blog about my experiences teaching <a href="blog">here</a>.
-          When I'm not teaching or coding, I can usually be found <a href="http://lilyriopelle.com">directing plays</a>,
-          consuming dangerous quantities of iced coffee, or adventuring around my beautiful hometown, NYC.
-        </p>
+            <p>
+              Luckily, I discovered programming, and immediately fell in love with its perfect balance
+              of rigorous, logical thinking and creative problem-solving.
+            </p>
+
+            <p>
+              I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>,
+              and blog about my experiences teaching <a href="blog">here</a>.
+            </p>
+
+            <p>
+              When I'm not teaching or coding, I can usually be found <a href="http://lilyriopelle.com">directing plays</a>,
+              consuming dangerous quantities of iced coffee (no matter the season), or adventuring around my beautiful hometown, NYC.
+            </p>
+          </section>
+        </div>
 
       </div>
 
